--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="./assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="./assets/Css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <title>boct</title>
   </head>
   <body>
